[package]
name = "backend"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[dependencies]
actix-web = "4.6.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", features = ["mysql", "runtime-actix-rustls", "chrono"] }
dotenv = "0.15"
rand = "0.8"
thiserror = "1.0"
actix-cors = "0.7.0"
chrono = { version = "0.4.38", features = ["serde"] }
argon2 = "0.5.3"
futures-util = "0.3.30"
actix-files = "0.6.6"
# original app from DreamArts
log = "0.4.22"
env_logger = "0.10.0"
# practice for Metrics
#log = "0.4"
#env_logger = "0.9"

# Datadog
# Asynchronous tasks
#tokio = { version = "1", features = ["full"] }
# DogStatSD
#metrics = "0.13"
#metrics-exporter-dogstatsd = "0.7"
# StatSD
#metrics = "0.17"
#metrics-exporter-statsd = "0.8"
# Opentelemetry ... from syagi
opentelemetry-auto-span = "0.3"
opentelemetry = { version = "0.20", default-features = false, features = ["trace", "rt-tokio-current-thread"] }
opentelemetry_sdk = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.13", features = ["tonic"] }
actix-web-opentelemetry = "0.15.0"
# Opentelemetry ... from GPT
#opentelemetry = { version = "0.16", features = ["trace", "rt-tokio"] }
#opentelemetry-datadog = "0.8"

[build-dependencies]
syn = "1"

[dev-dependencies]
actix-rt = "2.10.0"
